Updates to rpm build for WGen

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,5 @@ install-script = rpm_install
 pre-install = rpm_pre_install
 pre-uninstall = rpm_pre_uninstall
 requires = python,sysstat
+fix-python = /opt/wgen-3p/python26/bin/python2.6
+group = System/Utilities
