--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -142,7 +142,7 @@ install_full_deb: install_base_deb install_full
 # Make the datadog agent debian package that includes supervisor, the forwarder
 # etc.
 datadog_agent_deb: clean install_full_deb
-	FPM_EDITOR="echo 'Replaces: datadog-agent (<= $(VERSION)), datadog-agent-base (<= $(VERSION))' >>" \
+	FPM_EDITOR="echo '' >>" \
 $(FPM_BUILD) -t deb \
 -n datadog-agent \
 -d "python (>= 2.6)" \
@@ -153,6 +153,8 @@ $(FPM_BUILD) -t deb \
 -d "python-pexpect" \
 --conflicts "datadog-agent-lib (<< 3.4.0)" \
 --replaces "datadog-agent-lib (<< 3.4.0)" \
+--conflicts "datadog-agent-base (<< $(VERSION))" \
+--replaces "datadog-agent-bsae (<< $(VERSION)" \
 --config-files "/etc/dd-agent/supervisor_ddagent.conf" \
 --post-install datadog-agent-deb/postinst \
 --post-uninstall datadog-agent-deb/postrm \
